correction affichage interface admin